# RAG-demo

./: .dockerignore  .gitignore  dockerfile  pyproject.toml
src/langchain_demo/: config.py
src/langchain_demo/implementations/: __init__.py  bedrock_api_call.py  faiss_vectorbase.py  hugging_face_embeddings.py  langchain_textsplitter.py  openai_api_call.py  openai_embeddings.py
src/langchain_demo/interfaces/: embeddings_interface.py  model_api_call.py  text_splitter_interface.py  vectorbase_interface.py
src/langchain_demo/pipeline/: api_main.py  helper_functions.py  main_pipeline.py  testing.py
tests/: test_faiss_vectorbase.py
