[project]
name = "langchain-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "stefan dragicevic",email = "stefan.dragicevic@vegait.rs"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "faiss-cpu (>=1.11.0,<2.0.0)",
    "transformers (>=4.51.3,<5.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "openai (>=1.78.1,<2.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-community (>=0.3.24,<0.4.0)",
    "pypdf (>=5.5.0,<6.0.0)",
    "boto3 (>=1.38.16,<2.0.0)",
]

[tool.poetry]
packages = [{include = "langchain_demo", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
