[tool.poetry]
name = "langchain-demo"
version = "0.1.0"
description = "A demonstration project for Langchain." 
authors = ["stefan dragicevic <stefand998@gmail.com>"]
readme = "README.md"
packages = [{include = "langchain_demo", from = "src"}] 

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
faiss-cpu = ">=1.11.0,<2.0.0"
transformers = ">=4.51.3,<5.0.0"
torch = ">=2.7.0,<3.0.0"
python-dotenv = ">=1.1.0,<2.0.0"
openai = ">=1.78.1,<2.0.0"
langchain = ">=0.3.25,<0.4.0"
langchain-community = ">=0.3.24,<0.4.0"
pypdf = ">=5.5.0,<6.0.0"
boto3 = ">=1.38.16,<2.0.0"
uvicorn = "^0.34.2"
fastapi = "^0.115.12"
python-multipart = "^0.0.20"

[build-system]
requires = ["poetry-core>=1.0.0"] 
build-backend = "poetry.core.masonry.api"